<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2024 CNM Ingenuity, Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources xmlns:tools="http://schemas.android.com/tools">

  <!--  DO NOT add an app_name property when using this starter template; it is created automatically.-->
  <!--  <string name="app_name">App Starter</string>-->

  <string name="login_failure_message">Unable to sign in with provided credentials.</string>
  <string name="sign_out">Sign out</string>

  <string name="local_display_name_hint">Local Display Name</string>
  <string name="google_display_name_hint">Google Display Name</string>
  <string name="bearer_token_hint">Bearer Token</string>
  <string name="permissions_granted_hint">Permissions Granted</string>

  <string name="permissions_dialog_title">Permissions Needed</string>
  <string name="settings_label">Settings</string>
  <string name="settings">Settings</string>


  <string name="access_fine_location_explanation" tools:keep="@string/access_fine_location_explanation">This app uses location information for tracking your phone if it has been stolen</string>
  <!--  <string name="access_coarse_location_explanation" tools:keep="@string/access_coarse_location_explanation">This app uses location information for …</string>-->
  <!--  <string name="post_notifications_explanation" tools:keep="@string/access_post_notifications_explanation">This app uses notifications for …</string>-->
  <string name="selectable_text_pref_key">selectable_text_pref</string>
  <string name="selectable_text_pref_title">Selectable text</string>
  <string name="selectable_text_pref_summary_on">Uneditable text is selectable.</string>
  <string name="selectable_text_pref_summary_off">Uneditable text is not selectable.</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="alarm_sounding_fragment"> HELP! I AM A STOLEN PHONE!</string>
  <string name="alarm_warning_fragment_top">You Have</string>
  <string name="alarm_warning_fragment_bottom">Seconds to PUT ME DOWN!</string>
  <string name="alarm_arm_fragment">Alarm is Armed Leave Me Alone</string>
  <!-- Preference Titles -->
  <string name="messages_header">Messages</string>
  <string name="sync_header">Sync</string>

  <!-- Messages Preferences -->
  <string name="signature_title">Your signature</string>
  <string name="reply_title">Default reply action</string>

  <!-- Sync Preferences -->
  <string name="sync_title">Sync email periodically</string>
  <string name="attachment_title">Download incoming attachments</string>
  <string name="attachment_summary_on">Automatically download attachments for incoming emails
  </string>
  <string name="attachment_summary_off">Only download attachments when manually requested</string>
  <string name="disarm_code_label">Enter Disarm Code</string>
  <string name="disarm_button_label">Disarm</string>

  <string name="set_secure_label">Secure</string>
  <string name="set_unsecure_label">Unsecure</string>
  <string name="lat_header_label">Latitude</string>
  <string name="lon_header_label">Longitude</string>
  <string name="secure_header_label">Secure?</string>
  <string name="coordinate_format">%1$9.4f</string>
  <string name="countdown_key">countdown</string>
  <string name="dialog_message">Press SECURE if location is safe, press UNSECURE otherwise.  Press CANCEL to exit</string>
  <string name="dialog_title">Set Locations</string>


</resources>