<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".controller.AlarmSoundingFragment">

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/button_guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent=".55"
    />

  <TextView
    android:id="@+id/alarm_sounding_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/alarm_sounding_fragment"
    android:textSize="12pt"
    android:minLines="5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/button_guideline"
    />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/text_layout_code"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_dynamic_spacing"
    app:hintEnabled="true"
    app:hintAnimationEnabled="true"
    app:layout_constraintWidth_percent=".50"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="@id/button_guideline">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/text_code"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_dynamic_spacing"
      android:inputType="number"
      android:hint="@string/disarm_code_label"
      />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
    android:id="@+id/disarm_alarm"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/disarm_button_label"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/button_guideline"
    />

</androidx.constraintlayout.widget.ConstraintLayout>